[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://cathedral/3q4werytj76uy.png" type="Texture" id=2]
[ext_resource path="res://src/UserInterface/Title.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UserInterface/SceneChangeButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UserInterface/QuitButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://cathedral/Chomsky.otf" type="DynamicFontData" id=6]
[ext_resource path="res://cathedral/rsz_ui_concrete_1.png" type="Texture" id=7]
[ext_resource path="res://cathedral/CloisterBlack.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://src/Screens/Dissapear.gd" type="Script" id=9]
[ext_resource path="res://src/Screens/End.gd" type="Script" id=10]
[ext_resource path="res://src/Screens/Venom.gd" type="Script" id=11]
[ext_resource path="res://src/Screens/Sharpest.gd" type="Script" id=12]
[ext_resource path="res://src/Screens/Stop.gd" type="Script" id=13]
[ext_resource path="res://src/Screens/Prison.gd" type="Script" id=14]
[ext_resource path="res://src/Screens/MainScreen.gd" type="Script" id=15]

[sub_resource type="DynamicFont" id=1]
size = 97
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 45
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 21
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=7]
size = 21
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 34
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=9]
size = 50
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=10]
size = 27
font_data = ExtResource( 6 )

[node name="MainScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = -0.572431
anchor_top = -1.13388
anchor_right = 0.427569
anchor_bottom = -0.133884
margin_left = 1104.95
margin_top = 1213.12
margin_right = 1104.95
margin_bottom = 1213.12
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="." instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -432.155
margin_top = -286.822
margin_right = 433.845
margin_bottom = -188.822
custom_fonts/font = SubResource( 1 )
text = "Melody of Vengeance"

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -75.0
margin_right = 180.0
margin_bottom = 79.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" parent="Menu" instance=ExtResource( 4 )]
margin_right = 360.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 2 )
text = "Play"
next_scene_path = "res://src/Levels/Level01.tscn"

[node name="QuitButton" parent="Menu" instance=ExtResource( 5 )]
margin_top = 81.0
margin_right = 360.0
margin_bottom = 154.0
custom_fonts/font = SubResource( 3 )

[node name="ButtonStone" type="Sprite" parent="."]
position = Vector2( 957.982, 501.477 )
scale = Vector2( 2.84594, 2.43004 )
texture = ExtResource( 7 )

[node name="ButtonStone2" type="Sprite" parent="."]
position = Vector2( 957.982, 582.227 )
scale = Vector2( 2.84594, 2.43004 )
texture = ExtResource( 7 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_right = 0.595
anchor_bottom = 0.573
margin_left = 917.628
margin_top = 478.894
margin_right = -149.772
margin_bottom = -99.9461
custom_fonts/mono_font = SubResource( 4 )
custom_fonts/bold_italics_font = SubResource( 5 )
custom_fonts/italics_font = SubResource( 6 )
custom_fonts/bold_font = SubResource( 7 )
custom_fonts/normal_font = SubResource( 8 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
anchor_right = 0.595
anchor_bottom = 0.573
margin_left = 920.23
margin_top = 561.303
margin_right = -147.17
margin_bottom = -17.5367
custom_fonts/mono_font = SubResource( 4 )
custom_fonts/bold_italics_font = SubResource( 5 )
custom_fonts/italics_font = SubResource( 6 )
custom_fonts/bold_font = SubResource( 7 )
custom_fonts/normal_font = SubResource( 8 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="Node2D" parent="."]

[node name="Label" type="Label" parent="Music"]
margin_left = 1530.48
margin_top = 101.0
margin_right = 1846.48
margin_bottom = 197.0
custom_fonts/font = SubResource( 9 )
text = "Music Selection"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Venom" type="Button" parent="Music"]
margin_left = 1564.0
margin_top = 176.196
margin_right = 1824.0
margin_bottom = 219.196
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="End" type="Button" parent="Music"]
margin_left = 1564.0
margin_top = 237.683
margin_right = 1824.0
margin_bottom = 280.683
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dissapear" type="Button" parent="Music"]
margin_left = 1564.0
margin_top = 296.847
margin_right = 1824.0
margin_bottom = 339.847
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sharpest" type="Button" parent="Music"]
margin_left = 1564.0
margin_top = 358.268
margin_right = 1824.0
margin_bottom = 401.268
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prison" type="Button" parent="Music"]
margin_left = 1564.0
margin_top = 418.0
margin_right = 1824.0
margin_bottom = 461.0
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stop" type="Button" parent="Music"]
margin_left = 1564.0
margin_top = 477.054
margin_right = 1824.0
margin_bottom = 520.054
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonStone" type="Sprite" parent="Music"]
position = Vector2( 1693.81, 196.052 )
scale = Vector2( 2.0498, 1.53517 )
texture = ExtResource( 7 )

[node name="ButtonStone2" type="Sprite" parent="Music"]
position = Vector2( 1693.81, 257.438 )
scale = Vector2( 2.0498, 1.53517 )
texture = ExtResource( 7 )

[node name="ButtonStone3" type="Sprite" parent="Music"]
position = Vector2( 1693.81, 319.869 )
scale = Vector2( 2.0498, 1.53517 )
texture = ExtResource( 7 )

[node name="ButtonStone4" type="Sprite" parent="Music"]
position = Vector2( 1693.81, 381.44 )
scale = Vector2( 2.0498, 1.53517 )
texture = ExtResource( 7 )

[node name="ButtonStone5" type="Sprite" parent="Music"]
position = Vector2( 1693.81, 441.537 )
scale = Vector2( 2.0498, 1.53517 )
texture = ExtResource( 7 )

[node name="ButtonStone6" type="Sprite" parent="Music"]
position = Vector2( 1694.97, 499.302 )
scale = Vector2( 2.0498, 1.53517 )
texture = ExtResource( 7 )

[node name="Venom2" type="Label" parent="Music"]
margin_left = 1644.0
margin_top = 179.0
margin_right = 1736.0
margin_bottom = 212.0
custom_fonts/font = SubResource( 10 )
text = "Venom"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="End2" type="Label" parent="Music"]
margin_left = 1661.0
margin_top = 243.0
margin_right = 1753.0
margin_bottom = 276.0
custom_fonts/font = SubResource( 10 )
text = "End"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dissapear2" type="Label" parent="Music"]
margin_left = 1635.0
margin_top = 304.0
margin_right = 1749.0
margin_bottom = 337.0
custom_fonts/font = SubResource( 10 )
text = "Dissapear"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sharpest2" type="Label" parent="Music"]
margin_left = 1636.0
margin_top = 365.0
margin_right = 1750.0
margin_bottom = 398.0
custom_fonts/font = SubResource( 10 )
text = "Sharpest"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prison2" type="Label" parent="Music"]
margin_left = 1649.0
margin_top = 425.0
margin_right = 1763.0
margin_bottom = 458.0
custom_fonts/font = SubResource( 10 )
text = "Prison"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stop2" type="Label" parent="Music"]
margin_left = 1661.0
margin_top = 483.0
margin_right = 1775.0
margin_bottom = 516.0
custom_fonts/font = SubResource( 10 )
text = "Stop"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Music/Venom" to="." method="_on_Venom_pressed"]
[connection signal="pressed" from="Music/End" to="." method="_on_End_pressed"]
[connection signal="pressed" from="Music/Dissapear" to="." method="_on_Dissapear_pressed"]
[connection signal="pressed" from="Music/Sharpest" to="." method="_on_Sharpest_pressed"]
[connection signal="pressed" from="Music/Prison" to="." method="_on_Prison_pressed"]
[connection signal="pressed" from="Music/Stop" to="." method="_on_Stop_pressed"]
